2007-05-18  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_dialog_new): made the
	page header look like a selected list element.

2007-05-18  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: also removed the frame around
	the page header.

2007-05-17  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Applied patch from
	Eric Lamarque that optimizes backchar() use. See bug #374854.

2007-05-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff-load.c: split code to get the page name
	into a utility function.

2007-05-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_init): unset show-border.

	* app/widgets/gimpdockable.c (gimp_dockable_expose_event): don't
	paint the extension; reduces visual clutter.

2007-05-17  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c: also remove the border around
	the notebook pages and add 12 px spacing between the page and its
	title instead.

2007-05-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockseparator.c: removed period from tooltip.

	* app/dialogs/preferences-dialog.c
	* app/widgets/gimptoolbox.c: removed frames to reduce visual clutter.

	* app/widgets/gimptoolbox-indicator-area.c: draw with borders.

2007-05-17  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff-load.c: Fix the order of the imported paths.

2007-05-17  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff-save.c: save the paths in the TIFF.
	Please test interoperability with other programs.
	Fixes bug #131982.

	* plug-ins/common/tiff-load.c: fix coordinate reading for
	negative coordinates.

	* app/config/gimpguiconfig.c: Show color swatches by default.

2007-05-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpthumbbox.c
	* libgimp/gimpprogressbar.c
	* plug-ins/script-fu/script-fu-interface.c: use Gtk functions to
	manually iterate the main loop because they release the Gdk lock